# blockdata

./: pyproject.toml  requirements.txt
solquery/: example.csv
